// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/404 with default props 1`] = `
<div
  className="FourOhFour-root-1"
>
  <div
    className="FourOhFour-paper-2"
  >
    <div
      className="MuiPaper-root-4 MuiPaper-shadow5-11 MuiPaper-rounded-5 FourOhFour-message-3"
    >
      <h1
        className="MuiTypography-root-31 MuiTypography-display2-34"
      >
        HTTP 404 - Not Found
      </h1>
      <h3
        className="MuiTypography-root-31 MuiTypography-subheading-38"
      >
        Couldn't find path: 
        
      </h3>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Bus with default props 1`] = `
<div
  className="MuiPaper-root-4 MuiPaper-shadow8-14 MuiPaper-rounded-5 Bus-root-53"
>
  <div
    className="MuiCardContent-root-60 MuiCardHeader-root-55"
  >
    <div
      className="MuiCardHeader-avatar-56"
    >
      <div
        className="MuiAvatar-root-61 MuiAvatar-colorDefault-62"
        style={
          Object {
            "backgroundColor": "hsl(235, 100%, 33%)",
            "cursor": "default",
            "fontSize": 32,
            "height": 64,
            "width": 64,
          }
        }
      >
        1A
      </div>
    </div>
    <div
      className="MuiCardHeader-content-57"
    >
      <span
        className="MuiTypography-root-31 MuiTypography-body2-39 MuiCardHeader-title-58"
      >
        <h1
          className="MuiTypography-root-31 MuiTypography-display1-35"
        >
          Unknown
        </h1>
      </span>
      <span
        className="MuiTypography-root-31 MuiTypography-body2-39 MuiTypography-colorSecondary-51 MuiCardHeader-subheader-59"
      >
        1A - Eastbound
      </span>
    </div>
  </div>
  <div
    className="MuiCardMedia-root-64 Bus-media-54"
    style={
      Object {
        "backgroundImage": "url(bus-eastbound.svg)",
      }
    }
    title="1A - Eastbound"
  />
  <div
    className="MuiCardContent-root-60"
  >
    <h2
      className="MuiTypography-root-31 MuiTypography-title-37 MuiTypography-alignCenter-44"
    >
      Departing 
      unknown
      . 
      
    </h2>
  </div>
</div>
`;

exports[`Storyshots Components/Bus with location 1`] = `
<div
  className="MuiPaper-root-4 MuiPaper-shadow8-14 MuiPaper-rounded-5 Bus-root-53"
>
  <div
    className="MuiCardContent-root-60 MuiCardHeader-root-55"
  >
    <div
      className="MuiCardHeader-avatar-56"
    >
      <div
        className="MuiAvatar-root-61 MuiAvatar-colorDefault-62"
        style={
          Object {
            "backgroundColor": "hsl(235, 100%, 33%)",
            "cursor": "default",
            "fontSize": 32,
            "height": 64,
            "width": 64,
          }
        }
      >
        1A
      </div>
    </div>
    <div
      className="MuiCardHeader-content-57"
    >
      <span
        className="MuiTypography-root-31 MuiTypography-body2-39 MuiCardHeader-title-58"
      >
        <h1
          className="MuiTypography-root-31 MuiTypography-display1-35"
        >
          Unknown
        </h1>
      </span>
      <span
        className="MuiTypography-root-31 MuiTypography-body2-39 MuiTypography-colorSecondary-51 MuiCardHeader-subheader-59"
      >
        1A - Eastbound
      </span>
    </div>
  </div>
  <div
    className="MuiCardMedia-root-64 Bus-media-54"
    style={
      Object {
        "backgroundImage": "url(//maps.googleapis.com/maps/api/staticmap?size=400x350&maptype=roadmap&zoom=15&center=44.97167,-93.24725&markers=color:blue|44.97167,-93.24725&key=AIzaSyC3XH68CcTNbGGsxnHBCowhW2OaV_ITF2g)",
      }
    }
    title="1A - Eastbound"
  />
  <div
    className="MuiCardContent-root-60"
  >
    <h2
      className="MuiTypography-root-31 MuiTypography-title-37 MuiTypography-alignCenter-44"
    >
      Departing 
      unknown
      . 
      
    </h2>
  </div>
</div>
`;

exports[`Storyshots Components/Bus with long description 1`] = `
<div
  className="MuiPaper-root-4 MuiPaper-shadow8-14 MuiPaper-rounded-5 Bus-root-53"
>
  <div
    className="MuiCardContent-root-60 MuiCardHeader-root-55"
  >
    <div
      className="MuiCardHeader-avatar-56"
    >
      <div
        className="MuiAvatar-root-61 MuiAvatar-colorDefault-62"
        style={
          Object {
            "backgroundColor": "hsl(235, 100%, 33%)",
            "cursor": "default",
            "fontSize": 32,
            "height": 64,
            "width": 64,
          }
        }
      >
        1A
      </div>
    </div>
    <div
      className="MuiCardHeader-content-57"
    >
      <span
        className="MuiTypography-root-31 MuiTypography-body2-39 MuiCardHeader-title-58"
      >
        <h1
          className="MuiTypography-root-31 MuiTypography-display1-35"
        >
          Here we go, somewhere into the wild blue yonder!
        </h1>
      </span>
      <span
        className="MuiTypography-root-31 MuiTypography-body2-39 MuiTypography-colorSecondary-51 MuiCardHeader-subheader-59"
      >
        1A - Eastbound
      </span>
    </div>
  </div>
  <div
    className="MuiCardMedia-root-64 Bus-media-54"
    style={
      Object {
        "backgroundImage": "url(bus-eastbound.svg)",
      }
    }
    title="1A - Eastbound"
  />
  <div
    className="MuiCardContent-root-60"
  >
    <h2
      className="MuiTypography-root-31 MuiTypography-title-37 MuiTypography-alignCenter-44"
    >
      Departing 
      unknown
      . 
      
    </h2>
  </div>
</div>
`;

exports[`Storyshots Components/Home with default props 1`] = `
<div
  className="Home-root-65"
>
  <div
    className="Home-paper-66"
  >
    <div
      className="MuiPaper-root-4 MuiPaper-shadow5-11 MuiPaper-rounded-5 Home-message-67"
    >
      <h1
        className="MuiTypography-root-31 MuiTypography-display4-32"
      >
        Welcome!
      </h1>
      <h3
        className="MuiTypography-root-31 MuiTypography-subheading-38"
      >
        Select or add a new bus stop from the menu.
      </h3>
    </div>
  </div>
</div>
`;
